# gmpde

./: CHANGELOG.md  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/agents/: architect.md  code-optimizer.md  deployer.md  doc-reviewer.md  idea-researcher.md  implementer.md  monitor.md  orchestrator.md  problem-clarifier.md  project-planner.md  qa-validator.md  tech-scout.md  test-writer.md
.claude/commands/: approve-design.md  pipeline.md  quick-task.md
.github/workflows/: ci.yml
docs/: adr.md  architecture.md  blueprint-schema.md  decision-log.md  deploy-report.md  design-approval.md  problem-statement.md  project-plan.md  qa-report.md  research-brief.md  run-engine.md
docs/reviews/: adr-review.md  plan-review.md  problem-statement-review.md  research-review.md
docs/task-reports/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md
docs/test-reports/: T-001-tests.md
game/: game.js  index.html  style.css  tests.html
gmpde/: __init__.py  blueprint.py  cli.py  contracts.py  run_engine.py  runtime.py
schema/: blueprint.schema.json  blueprint.template.json  run_index.template.json  run_metadata.template.json
tests/: test_blueprint.py  test_contracts.py  test_run_engine.py
